# AutoDocs

backend_v1/: README.md  REFRESH_TOKEN_GUIDE.md  auth.py  db.py  main.py  models.py  pyproject.toml  test.db  test_api.sh
backend_v1/public/templates/: certificate.html  testimonial.html
backend_v1/router/: auth.py  documents.py  payments.py  users.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/public/: certificate.html
frontend/public/template/: certificate.html  test-certificate.html  testimonial.html
frontend/src/: App.jsx  AuthContext.jsx  Layout.jsx
frontend/src/api/: client.js  services.js
frontend/src/components/: ProtectedRoute.jsx
frontend/src/components/contact/: ContactInfo.jsx  Faq.jsx
frontend/src/components/layout/: Footer.jsx  Navbar.jsx
frontend/src/pages/: AboutUs.jsx  AdminDashboard.jsx  Certificate.jsx  Contact.jsx  Login.jsx  Payment.jsx  Profile.jsx  ProfileUpdate.jsx  Services.jsx  Team.jsx  VerifyCertificate.jsx
