[project]
name = "backend-v1"
version = "0.1.0"
description = "FastAPI backend for certificate generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.5",
    "weasyprint>=63.1",
    "qrcode>=8.0",
    "pillow>=11.0.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.22",
    "argon2-cffi>=25.1.0",
]
